# blind-up

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dev_ci.yml  main_cicd.yml
app/: __init__.py  config.py  db.py  main.py
app/repositories/: __init__.py  blindtest_repository.py  song_repository.py
app/services/: __init__.py  audio_metadata_service.py  library_scan_service.py  media_path_service.py
app/static/: app.js  index.html  styles.css
app/templates/: base.html  editor.html  home.html  player.html  scan.html
docs/: README.md  architecture_overview.md  blindup_contrat.json  gameplay_rules.md  product_spec.md
docs/specs/: blindtest_editor.md  blindtest_json_exchange.md  blindtest_player.md  charte.md  db_schema.md  home_panel.md  library_scan.md  song_waveform_editor.md
tests/: test_app.py  test_audio_metadata_service.py  test_blindtest_repository.py  test_library_scan_service.py  test_media_path_service.py  test_song_repository.py
