[project]
name = "blind-up"
version = "1.1.0"
description = "Minimal foundation for the BlindUp local FastAPI application"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "uvicorn>=0.35,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "python-semantic-release>=9.21,<10.0",
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.1,<7.0",
    "ruff>=0.11,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.semantic_release]
allow_zero_version = true
branch = "main"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
upload_to_pypi = false
version_toml = ["pyproject.toml:project.version"]
